--- a/microservices/my-app/configserver/pom.xml
+++ b/microservices/my-app/configserver/pom.xml
@@ -11,6 +11,13 @@
 
     <artifactId>configserver</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
