--- a/microservices/my-app/pom.xml
+++ b/microservices/my-app/pom.xml
@@ -18,8 +18,10 @@
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
   <modules>
-    <module>gateway</module>
     <module>configserver</module>
+    <module>driver</module>
+    <module>customer</module>
+    <module>gateway</module>
   </modules>
 
 
